syntax = "proto3";

package usermgmt.v2;

import "common/v1/enums.proto";

option java_package = "io.manabie.demo.proto.usermgmt.v2";
option go_package = "github.com/manabie-com/backend/pkg/manabuf/usermgmt/v2;upb";

message RoleWithLocations {
  string role_id = 1;
  repeated string location_ids = 2;
}

message CreateUserGroupRequest {
  string user_group_name = 1;
  repeated RoleWithLocations role_with_locations = 2;
}
message CreateUserGroupResponse {
  string user_group_id = 1;
}

message UpdateUserGroupRequest {
  string user_group_id = 1;
  string user_group_name = 2;
  repeated RoleWithLocations role_with_locations = 3;
}
message UpdateUserGroupResponse {
    bool successful = 1;
}

message ValidateUserLoginRequest {
  common.v1.Platform platform = 1;
}
message ValidateUserLoginResponse {
    bool allowable = 1;
}

service UserGroupMgmtService {
  rpc CreateUserGroup(CreateUserGroupRequest) returns (CreateUserGroupResponse);
  rpc UpdateUserGroup(UpdateUserGroupRequest) returns (UpdateUserGroupResponse);
  rpc ValidateUserLogin(ValidateUserLoginRequest) returns (ValidateUserLoginResponse);
}
